# computacao_escalavel

./: .gitignore  CMakeLists.txt  README.md  analysis.txt  dados_viagens_2025.csv  dadosfake.csv  database.db  grpc_client.cpp  grpc_server.cpp  main  main.cpp  pipe_hoteis.cpp  pipe_voos.cpp  pipeline.cpp  pipeline.h  profile.txt  programa  requirements.sh  requirements.txt  response_times_11.csv  response_times_20.csv  response_times_7.csv  run_grpc.sh  setup_grpc.sh  simulator.py  teste  teste.cpp
drafts/: base_classes.h  not_much_base.cpp
framework/: BaseClasses.h  Buffer.h  Dataframe.h  Dataframe.hpp  Extrator.h  Manager.h  Semaphore.h  Series.h  Series.hpp  TaskQueue.h  TesteDataframe.cpp  TesteTrigger.cpp  Transformer.h  Triggers.h  main.cpp  teste.cpp
framework/old_code/: Dataframe_old.h
grpc_results/: response_times_1.csv  response_times_14.csv  response_times_17.csv  response_times_2.csv  response_times_3.csv  response_times_4.csv  response_times_5.csv  response_times_9.csv  resultados_agregados_grpc.csv
mock/: simulador_hoteis.py  simulador_voos.py  simulator.py  simulator_pesquisas.py
mock/data/: dados_hoteis2_2025.csv  dados_hoteis3_2025.csv  dados_pesquisa_2025.db  dados_pesquisas_2025.csv  dados_viagens_2025.csv  dados_viagens_2025.db  voos_2025.csv
mock_client/client/: generate_all.py  grpc_client.py
mock_client/proto/: extractor.grpc.pb.cc  extractor.grpc.pb.h  extractor.pb.cc  extractor.pb.h  extractor_pb2.py  extractor_pb2_grpc.py
mock_server/client/: generate_all.py  grpc_client.py
mock_server/proto/: extractor.grpc.pb.cc  extractor.grpc.pb.h  extractor.pb.cc  extractor.pb.h  extractor.proto  extractor_pb2.py  extractor_pb2_grpc.py
mock_server/server/: generate_all.py  generate_pesquisas.py  generate_reservas.py  generate_voos.py  grpc_server.py
